<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能厨房</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_phone_default">输入手机号</string>
    <string name="register_check_num_default">输入用户名</string>
    <string name="register_get_check_num">获取验证码</string>
    <string name="register_upass_default">需组合数字、字母或符号</string>
    <string name="register_info">我已看过并同意智能厨房《用户使用协议》</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
