<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:padding="@dimen/normal_space"
                android:src="@drawable/ic_back_u" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/normal_space"
                android:text="@string/register_title"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/normal_space"
            android:background="@color/normal_orange_color" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:layout_marginLeft="@dimen/normal_space"
            android:background="@drawable/mini_block_item_normal"
            android:drawableLeft="@drawable/my_register_check_name"
            android:drawablePadding="@dimen/normal_space"
            android:hint="输入用户名"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:layout_marginLeft="@dimen/normal_space"
            android:background="@drawable/mini_block_item_normal"
            android:drawableLeft="@drawable/my_register_pass"
            android:drawablePadding="@dimen/normal_space"
            android:hint="@string/register_upass_default"
            android:inputType="text"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_layout"
        android:layout_margin="@dimen/normal_space"
        android:background="@drawable/my_btn_bg_color"
        android:padding="@dimen/little_space"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_defalut" />

    <CheckBox
        android:id="@+id/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/register_btn"
        android:layout_below="@id/register_btn"
        android:button="@drawable/my_register_check_info"
        android:checked="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/register_info"
        android:layout_alignTop="@id/register_info"
        android:layout_below="@id/register_btn"
        android:layout_toRightOf="@id/register_info"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/normal_space"
        android:singleLine="true"
        android:text="@string/register_info" />


</RelativeLayout>